# socless_rust

./: .gitignore  README.md
crates/socless/: Cargo.toml
crates/socless/src/: clients.rs  constants.rs  errors.rs  events.rs  helpers.rs  humaninteraction.rs  integrations.rs  lib.rs  models.rs  resolver.rs  utils.rs
crates/socless/tests/: integration.rs  localstack_setup.rs  models.rs
crates/xtask/: Cargo.toml
socless/: Cargo.toml
socless/src/: events.rs  helpers.rs  human_interaction.rs  humaninteraction.rs  integrations.rs  lib.rs  models.rs  utils.rs
