[package]
name = "socless"
version = "0.1.0"
authors = ["Saxon <34722463+noxasaxon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lamedh_http = "0.3"
lamedh_runtime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = "2.0"
rusoto_core = {version = "0.46", default_features = false, features = ["rustls"]}
rusoto_s3 = {version = "0.46", default_features = false, features = ["rustls"]}
rusoto_dynamodb = {version = "0.46", default_features = false, features=[ "deserialize_structs", "rustls"]}
rusoto_stepfunctions = {version="0.46", default_features = false, features = ["rustls"]}
md5 = { version = "0.7" }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4.19"
itertools = "0.10"
futures = "0.3"
async-recursion = "0.3"
tokio = { version = "1.2", features = ["macros"] }
maplit = "1.0.2"
# hyper = { features = ["http2"] }

[dev-dependencies]
tokio-test = "0.4"