[package]
name = "socless"
version = "0.1.0"
authors = ["Saxon <34722463+noxasaxon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lamedh_http = "0.3"
lamedh_runtime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = "2.0"
rusoto_core = {version = "0.46", default_features = false}
rusoto_s3 = {version = "0.46", default_features = false}
rusoto_dynamodb = {version = "0.46", default_features = false, features=["deserialize_structs"]}
rusoto_stepfunctions = {version="0.46", default_features = false}
md5 = { version = "0.7" }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4.19"
itertools = "0.10"
futures = "0.3"
async-recursion = "0.3"
tokio = { version = "1.2", features = ["macros"] }
maplit = "1.0.2"
hyper = { version = "0.14", features = ["http2"], optional = true } # needed for rustls

[dev-dependencies]
tokio-test = "0.4"

[features]
# default = ["rusoto_core/default", "rusoto_s3/default", "rusoto_dynamodb/default", "rusoto_stepfunctions/default"]
rustls = ["rusoto_core/rustls", "rusoto_s3/rustls", "rusoto_dynamodb/rustls", "rusoto_stepfunctions/rustls", "hyper/http2"]