[package]
name = "socless"
version = "0.1.0"
authors = ["Saxon <34722463+noxasaxon@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.58"

[dependencies]
lambda_http = "0.4"
lambda_runtime = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7" 
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4.19"
itertools = "0.10"
futures = "0.3"
async-recursion = "1.0"
# tokio = { version = "1.15", features = ["macros", "sync"] }
tokio = { version = "1.15", features = ["macros", "parking_lot"] }
maplit = "1.0.2"
aws-config = {version = "0.4", features=["rustls"]}
aws-types = {version = "0.4"}
aws-sdk-dynamodb = {version = "0.4", features=["rustls"]}
aws-sdk-sfn = {version = "0.4", features=["rustls"]}
aws-sdk-s3 = {version = "0.4", features=["rustls"]}
serde_dynamo = { version = "3.0.0-alpha", features = ["aws-sdk-dynamodb+0_4"] }
hyper = "0.14" 
# hyper = { version = "0.14", default_features = false, features = ["http2"], optional = true } # needed for rustls
hyper-rustls = {version = "0.23", features = ["webpki-roots", "rustls-native-certs"]}
rustls = "0.20"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = { git= "https://github.com/testcontainers/testcontainers-rs", rev="bec5196f120c112da696be7c9053f63d5811e8c6"}
anyhow = "1.0"
reqwest = {version = "0.11", features = ["blocking"] }
pretty_assertions = "1.0"


# [features]
# default = ["rusoto_core/default", "rusoto_s3/default", "rusoto_dynamodb/default", "rusoto_stepfunctions/default"]
# rustls = ["rusoto_core/rustls", "rusoto_s3/rustls", "rusoto_dynamodb/rustls", "rusoto_stepfunctions/rustls", "hyper/http2"]

# [features]
# default = ["dynamodb"]
# dynamodb = ["receptionist/dynamodb"]
# tempdb = ["receptionist/tempdb"]
# ansi = ["receptionist/ansi"]